lab1/Test/L1-A-12-39.output
Error Type A at Line 4
Error Type A at Line 6
Error Type A at Line 12
Error Type B at Line 26
