lab1/Test/L1-A-12-39.cmm
struct MRJZcdowdHFwOJ ;
int I2Wcorb2R ( struct qFIYvX JIXPwF8wxFWaXfE12 ) 
  {
  int cGg_cGwEC0 `;
  struct {
  }TCENyJ , KCOlrPt ~, bbXLfT ;
  if ( QKevvnjVPvfo )   if ( Qg )   return R4 ;
else {
    int rN2a6iLxGyDaAncY [ 333028825 ] = J ;
  }
else   if ( lfbE6o )   while ( D )   WC0MjAfAgEy27R2E 
    ~|| iXWJSQz5ZPnb && raW6cAwiCSwv / ! - O8Azt2bZuq5fesFrZtF 
    [ mLP_ = MbS_q4S1eE == eFIim - mWt * qt5IynB ( awzUXqrh5vDiXd 
    , AE && hRHexZUMYqCl1souWj > u [ pGJtTaglaV4r <= W8igB24cbbFCToSA 
    + - ( h91wjE2kSP7Ns = WTestT_0Q7Ak7i0ion >= ! xdLjlnSty 
    [ GQGDDtd != ZBhA9sZYCN [ L4Ne3vv7Ou / - KZSsojq4LrKtOiNRV 
    ] ] ) < 1903716087.1006031293 ] * 1289724750 . uyJTwYSPc 
    ) + TQShJE1wfRWRWsf ( ) ] ;



}
float c 
;
struct F {
;
struct RJwBM ;
int ;
int dcCl7TsFLyfSSNoc2Vni , rohcE 

;
int ;
int ;
int ;
int ;
int qJBPtgGovborHlG5Y_e ( ) {
  }
int ;
int egZ_C8hxeDVE7m ( ) {
  }
int hMULSCCD2bxnuOH2f08v ( int SOLZ , int lgV0XBK4xvttL 
    ) {
  }
